--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -16,20 +16,73 @@
 #cartItems {
   width: 70%;
   display: flex;
-  margin-top: 20px;
+  flex-wrap: wrap;
 }
 
 .item {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: flex-start;
   width: 100%;
-  height: 100%;
   font-family: 'Dosis', sans-serif;
   font-size: 20px;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+.item button,
+#checkOut button {
+  height: 35px;
+  width: 100px;
+  border-radius: 10px;
+  text-align: center;
+  margin-top: 35px;
+  background-color: #54bab9;
+  color: #e9dac1;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+  border-radius: 50px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  transition: 300ms;
+  font-size: 18px;
+}
+
+#checkOut button {
+  font-family: 'Source Serif 4', serif;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.item button:hover,
+#checkOut button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+
+select,
+.price {
+  margin-top: 35px;
+}
+
+select {
+  font-family: 'Dosis', sans-serif;
+  font-weight: 600;
+}
+
+.totalPrice {
+  font-weight: 600;
+  margin-right: 5px;
 }
 
 #checkOut {
   width: 15%;
+  font-family: 'Source Serif 4', serif;
+  margin-top: 25px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  height: fit-content;
+  padding: 30px;
+  border-radius: 20px;
 }
 
 .card {
@@ -38,12 +91,47 @@
   font-weight: 600;
   display: flex;
   flex-wrap: wrap;
-  width: 50%;
+  width: 30%;
 }
 
-img {
+.card img {
   width: 300px;
   height: 200px;
   object-fit: cover;
   border-radius: 10px;
+  margin-top: 5px;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+select {
+  height: 30px;
+  width: 50px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+#checkOut span {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+#checkOut input {
+  transform: scale(1.5);
+}
+
+#checkOut div {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+label img {
+  width: 50px;
+  border-radius: 10px;
+}
+
+#total {
+  display: flex;
+  justify-content: space-between;
 }
