--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -14,14 +14,50 @@
         <div class="title"><%=item.product.title%></div>
         <img src="<%=item.product.image%>" />
       </div>
-      <div class="quantity"><%= item.quantity %></div>
+      <button>Remove</button>
+      <select name="quantity" id="quantity">
+        <% for (let i = 1; i <= item.product.stock ; i ++) {%> <% if(i ===
+        item.quantity) {%>
+        <option value="<%=i%>" selected="selected"><%=i%></option>
+        <% } else{%>
+        <option value="<%=i%>"><%=i%></option>
+        <% } %> <% } %>
+      </select>
       <div class="price">
-        $<%=(item.product.price*item.quantity).toFixed(2)%>
-        ($<%=item.product.price.toFixed(2)%> each)
+        <span class="totalPrice"
+          >$<%=(item.product.price*item.quantity).toFixed(2)%></span
+        >
+        <span>($<%=item.product.price.toFixed(2)%> each)</span>
       </div>
     </div>
     <% } %> <% } %>
   </div>
-  <div id="checkOut"></div>
+  <div id="checkOut">
+    <span>How Will You Pay?</span>
+    <form action="">
+      <div>
+        <input type="radio" id="cards" name="payment" />
+        <label for="cards"
+          ><img src="/images/visa.png" /><img
+            src="/images/mastercard.png"
+          /><img src="/images/amex.png" />
+          <img src="/images/discover.png" />
+        </label>
+      </div>
+      <div>
+        <input type="radio" id="paypal" name="payment" />
+        <label for="paypal"><img src="/images/paypal.png" /></label>
+      </div>
+      <div>
+        <input type="radio" id="klarna" name="payment" />
+        <label for="klarna"><img src="/images/klarna.png" /></label>
+      </div>
+      <div id="total">
+        <span>Item(s) total</span>
+        <span>$<%=grandTotal%></span>
+      </div>
+      <button>Purchase!</button>
+    </form>
+  </div>
   <% } %>
 </div>
